sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:8: error: not found: value k
      k = len-2 - j
      ^AlgBubbleSort2:9: error: not found: value k
      for(i<- 0 to k){
                   ^